# GL3H

./: .gitlab-ci.yml  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
src/: attrib_info.cpp  gl3h.cpp  index_buffer.cpp  renderer.cpp  shader.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp  vertex_layout.cpp
